--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <h2 class="text-2xl md:text-3xl font-light brand-dark-green mb-8">DOCU-HUB OPERATIONS SERVICES | Compliance & Systems Expert</h2>
                 <!-- About Me Portfolio Overview -->
                 <p class="text-lg text-gray-600 mb-10 max-w-xl">
-                    I offer dedicated, project-based administrative solutions. I bring 15+ years of high-compliance experience to organize your records, manage complex documents, and ensure everything is audit-ready.
+                    I offer dedicated, project-based administrative solutions. I leverage 15+ years of high-compliance experience to eliminate administrative risk, bringing you peace of mind knowing your complex documents and statutory submissions are handled with absolute authority and accuracy.
                 </p>
                 <div class="flex justify-center md:justify-start space-x-4">
                     <a href="#services" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-8 rounded-lg shadow-lg transform hover:scale-105 transition duration-300">
@@ -325,3 +325,4 @@
 
 </body>
 </html>
+
