--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                  <div class="review-card p-6 rounded-xl">
                      <p class="text-4xl mb-4 text-green-500"><i class="fas fa-quote-left"></i></p>
                      <p class="text-gray-700 italic mb-4">"Thanks for simplifying the passport application process, it's my first one and i didn't know where to start."</p>
-                     <p class="font-bold text-gray-800">- Danielle</p>
+                     <p class="font-bold text-gray-800">- Danielle, Private Client</p>
                  </div>
                  <!-- Review 2 (Claude - MV Renewal) -->
                  <div class="review-card p-6 rounded-xl">
@@ -250,7 +250,7 @@
                  <div class="review-card p-6 rounded-xl">
                      <p class="text-4xl mb-4 text-green-500"><i class="fas fa-quote-left"></i></p>
                      <p class="text-gray-700 italic mb-4">"Outstanding. Navigated the online portal for me and avoided a major error. Highly recommend for any complex form submission."</p>
-                     <p class="font-bold text-gray-800">- S. Williams, Individual Client</p>
+                     <p class="font-bold text-gray-800">- U. Clarke, Individual Client</p>
                  </div>
              </div>
         </div>
@@ -305,3 +305,4 @@
 
 </body>
 </html>
+
