Refactor index.html to remove duplicate content

--- a/index.html
+++ b/index.html
@@ -351,10 +351,31 @@
                 observer.observe(el);
             });
         });
+    
+        
+        // Existing JavaScript for Animations
+        document.addEventListener('DOMContentLoaded', () => {
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add('scroll-reveal-visible');
+                        observer.unobserve(entry.target);
+                    }
+                });
+            }, {
+                threshold: 0.1
+            });
+
+            const elements = document.querySelectorAll('.scroll-reveal');
+            elements.forEach(el => {
+                observer.observe(el);
+            });
+        });
     </script>
 
 
 </body>
 </html>
+
 
 
