Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -183,11 +183,12 @@
             </div>
         </div>
         
-        <!-- NEW CTA BLOCK: Inserted after solutions grid -->
+       <!-- NEW CTA BLOCK: Subtle and Gentle Nudge -->
         <div class="bg-gray-100 py-12 border-t border-gray-200 mt-16 scroll-reveal">
             <div class="container mx-auto px-6 text-center">
-                <h3 class="text-3xl font-extrabold brand-dark-green mb-4">Ready to Resolve Your Challenge?</h3>
-                <p class="text-lg text-gray-700 mb-8">Stop worrying about errors and delays. Contact me now for a guaranteed, error-free submission process.</p>
+                <!-- UPDATED MESSAGE: Subtle and Gentle Nudge -->
+                <h3 class="text-3xl font-extrabold brand-dark-green mb-4">Ready to Move Forward with Confidence?</h3>
+                <p class="text-lg text-gray-700 mb-8">If you have a complex document or submission deadline looming, let's schedule a brief, confidential review of your situation.</p>
                 <div class="flex flex-col md:flex-row justify-center space-y-4 md:space-y-0 md:space-x-6">
                     <!-- FINAL CTA: Single button linking to footer for all contact options -->
                     <a href="#footer" class="text-lg brand-green-bg text-white font-bold py-3 px-8 rounded-lg shadow-xl transform hover:scale-105 transition duration-300 inline-flex items-center justify-center">
