--- a/index.html
+++ b/index.html
@@ -270,10 +270,8 @@
     <footer id="footer" class="brand-dark-green-bg text-white py-20">
         <div class="container mx-auto px-6 text-center">
             
-            <h2 class="text-4xl font-bold mb-4">Ready to Resolve Your Challenge?</h2>
-            <p class="text-xl text-gray-300 mb-10 max-w-xl mx-auto" id="email-feedback-container">
-                For a quick, error-free solution, contact me directly via WhatsApp or Email.
-            </p>
+            <h2 class="text-4xl font-bold mb-4">Contact Us</h2>
+            
             <div class="flex flex-col md:flex-row justify-center space-y-4 md:space-y-0 md:space-x-6">
                 <!-- Direct WhatsApp Link (Replace XXXXXXX with your number) -->
                 <a href="https://wa.me/18769902406" target="_blank" class="text-lg bg-white/10 border border-white/20 font-bold py-3 px-8 rounded-lg shadow-lg hover:bg-white/20 transition duration-300 inline-flex items-center justify-center">
@@ -373,3 +371,4 @@
 
 </body>
 </html>
+
