--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <div class="flex flex-col md:flex-row items-start space-y-4 md:space-y-0 md:space-x-8 p-6 bg-white rounded-xl shadow-2xl border-l-4 border-yellow-600">
                     <div class="flex-shrink-0 text-3xl text-yellow-600 mt-1"><i class="fas fa-sack-dollar"></i></div>
                     <div>
-                        <h3 class="text-xl font-bold mb-2">Financial Integrity & Audit Readiness (NCB Background)</h3>
+                        <h3 class="text-xl font-bold mb-2">Financial Integrity & Audit Readiness</h3>
                         <p class="text-gray-600">
                             My background at **NCB** instilled a non-negotiable standard for accurate financial processing. This expertise ensures your personal or small business records are **clean, verified, and 100% ready for tax filing or external review**, protecting you from future audit complications.
                         </p>
@@ -282,7 +282,7 @@
                 <div class="flex flex-col md:flex-row items-start space-y-4 md:space-y-0 md:space-x-8 p-6 bg-white rounded-xl shadow-2xl border-l-4 border-blue-600">
                     <div class="flex-shrink-0 text-3xl text-blue-600 mt-1"><i class="fas fa-tasks"></i></div>
                     <div>
-                        <h3 class="text-xl font-bold mb-2">Operational Systems & Compliance Management (OEC Background)</h3>
+                        <h3 class="text-xl font-bold mb-2">Operational Systems & Compliance Management</h3>
                         <p class="text-gray-600">
                             Experience managing complex, simultaneous exams at the **OEC** proves my ability to enforce **absolute compliance and meticulous logistical coordination**. This ensures your administrative systems are **correctly organized from the start**, avoiding clutter and compliance gaps.
                         </p>
@@ -431,3 +431,4 @@
 
 </body>
 </html>
+
