--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </nav>
             
             <!-- Primary Action Button (Desktop) -->
-            <a href="https://wa.me/XXXXXXXXXX" target="_blank" class="btn-primary px-4 py-2 rounded-xl text-sm hidden md:inline-block shadow-md" aria-label="WhatsApp Us for quick assistance">
+            <a href="https://wa.me/876 5612614" target="_blank" class="btn-primary px-4 py-2 rounded-xl text-sm hidden md:inline-block shadow-md" aria-label="WhatsApp Us for quick assistance">
                 <i data-lucide="message-square-text" class="inline-block w-4 h-4 mr-1 -mt-0.5"></i>
                 WhatsApp Us
             </a>
@@ -82,7 +82,7 @@
             <a href="#services" class="hover:text-gold transition duration-150 py-2 border-b border-gray-700" onclick="document.getElementById('mobile-menu').classList.add('hidden')">Services & Fees</a>
             <a href="#compliance" class="hover:text-gold transition duration-150 py-2 border-b border-gray-700" onclick="document.getElementById('mobile-menu').classList.add('hidden')">Compliance Shield</a>
             <a href="#about" class="hover:text-gold transition duration-150 py-2 border-b border-gray-700" onclick="document.getElementById('mobile-menu').classList.add('hidden')">About Laura</a>
-            <a href="https://wa.me/XXXXXXXXXX" target="_blank" class="btn-primary px-4 py-3 rounded-xl text-lg mt-4 text-center" onclick="document.getElementById('mobile-menu').classList.add('hidden')">
+            <a href="https://wa.me/8765612614" target="_blank" class="btn-primary px-4 py-3 rounded-xl text-lg mt-4 text-center" onclick="document.getElementById('mobile-menu').classList.add('hidden')">
                 Contact via WhatsApp
             </a>
         </nav>
@@ -278,4 +278,5 @@
     </script>
 </body>
 </html>
+
 
