--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <p class="text-lg mb-4 leading-relaxed font-semibold text-navy">
                         "Mi know seh the process can feel overwhelming. My goal is simple: to provide reliable, low-cost clerical support and digital coaching so you can walk into the government office confident that your paperwork is done right the first time."
                     </p>
-                    <a href="https://wa.me/XXXXXXXXXX" target="_blank" class="btn-primary px-6 py-3 rounded-full mt-4 inline-block shadow-lg text-lg">
+                    <a href="https://wa.me/8765612614" target="_blank" class="btn-primary px-6 py-3 rounded-full mt-4 inline-block shadow-lg text-lg">
                         <i data-lucide="briefcase" class="inline-block w-5 h-5 mr-2 -mt-0.5"></i>
                         Connect with Laura Now
                     </a>
@@ -233,7 +233,7 @@
     <footer class="bg-gray-900 text-white py-10">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <div class="text-2xl font-bold mb-4 text-gold">DOCU-HUB OPERATIONS SERVICES</div>
-            <p class="text-sm mb-2">Proprietor: Laura Clarke. Verifiable Address: 361 Charlemont Linstead, St. Catherine.</p>
+            <p class="text-sm mb-2">Proprietor: Laura Clarke. Verifiable Address: 361 Charlemont, Linstead, St. Catherine.</p>
             <p class="text-sm mb-6 text-gray-400">
                 Email: admin@dochubservices.com | Phone: (876) 561 2614
             </p>
@@ -278,5 +278,6 @@
     </script>
 </body>
 </html>
+
 
 
