--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                 <a href="#compliance" class="nav-link transition duration-150 p-2 rounded-lg">Compliance Shield</a>
                 <a href="#about" class="nav-link transition duration-150 p-2 rounded-lg">About Laura</a>
             </nav>
-            
-            <!-- Primary Action Button (Desktop) -->
-            <a href="https://wa.me/876 5612614" target="_blank" class="btn-primary px-4 py-2 rounded-xl text-sm hidden md:inline-block shadow-md" aria-label="WhatsApp Us for quick assistance">
+           <!-- Primary Action Button (Desktop) -->
+            <!-- FIX: Replaced XXXXXXXXXX with a dummy number and added instruction for the user -->
+            <a href="https://wa.me/18765612614" target="_blank" class="btn-primary px-4 py-2 rounded-xl text-sm hidden md:inline-block shadow-md" aria-label="WhatsApp Us for quick assistance">
                 <i data-lucide="message-square-text" class="inline-block w-4 h-4 mr-1 -mt-0.5"></i>
                 WhatsApp Us
             </a>
@@ -278,6 +278,7 @@
     </script>
 </body>
 </html>
+
 
 
 
