--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             <div class="flex flex-col md:flex-row items-center gap-12 bg-white p-8 rounded-2xl shadow-xl">
                 <div class="md:w-1/3 flex justify-center">
                     <!-- Placeholder for a professional profile image (important for trust) -->
-                    <img src="https://placehold.co/200x200/E0B841/1E293B?text=Laura" alt="Professional profile of Laura Clarke" class="rounded-full border-4 border-gold shadow-lg w-48 h-48 object-cover">
+                    <img src="images/profile-picture.png" alt="Professional profile of Laura Clarke" class="rounded-full border-4 border-gold shadow-lg w-48 h-48 object-cover">
                 </div>
                 <div class="md:w-2/3 text-gray-700">
                     <p class="text-lg mb-4 leading-relaxed">
@@ -329,9 +329,9 @@
             
             <!-- Mandatory Legal Links -->
             <div class="flex justify-center space-x-6 text-sm font-semibold mb-6">
-                <a href="#privacy-policy" class="hover:text-gold transition duration-150 p-1">Privacy Policy</a>
-                <a href="#terms-of-service" class="hover:text-gold transition duration-150 p-1">Terms of Service</a>
-                <a href="#legal-notice" class="hover:text-gold transition duration-150 p-1">Legal Notice</a>
+                <a href="PDG/PRIVACY POLICY.pdf" class="hover:text-gold transition duration-150 p-1">Privacy Policy</a>
+                <a href="PDF/TERMS OF SERVICE (TOS).pdf" class="hover:text-gold transition duration-150 p-1">Terms of Service</a>
+                <a href="PDF/LEGAL NOTICE.pdf" class="hover:text-gold transition duration-150 p-1">Legal Notice</a>
             </div>
 
             <p class="text-xs mt-4 text-gray-500">
@@ -377,3 +377,4 @@
     </script>
 </body>
 </html>
+
