--- a/index.html
+++ b/index.html
@@ -329,9 +329,9 @@
             
             <!-- Mandatory Legal Links -->
             <div class="flex justify-center space-x-6 text-sm font-semibold mb-6">
-                <a href="PDG/PRIVACY POLICY.pdf" class="hover:text-gold transition duration-150 p-1">Privacy Policy</a>
-                <a href="PDF/TERMS OF SERVICE (TOS).pdf" class="hover:text-gold transition duration-150 p-1">Terms of Service</a>
-                <a href="PDF/LEGAL NOTICE.pdf" class="hover:text-gold transition duration-150 p-1">Legal Notice</a>
+                <a href="PDF/privacy-policy.pdf" class="hover:text-gold transition duration-150 p-1">Privacy Policy</a>
+                <a href="PDF/terms-of-service.pdf" class="hover:text-gold transition duration-150 p-1">Terms of Service</a>
+                <a href="PDF/legal-notice.pdf" class="hover:text-gold transition duration-150 p-1">Legal Notice</a>
             </div>
 
             <p class="text-xs mt-4 text-gray-500">
@@ -377,4 +377,5 @@
     </script>
 </body>
 </html>
+
 
