--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@
     <footer class="bg-gray-900 text-white py-10">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <div class="text-2xl font-bold mb-4 text-gold">DOCU-HUB OPERATIONS SERVICES</div>
-            <p class="text-sm mb-2">Proprietor: Laura Clarke. Verifiable Address: [Insert Address Placeholder].</p>
+            <p class="text-sm mb-2">Proprietor: Laura Clarke. Verifiable Address: Charlemont, Linstead, St. Catherine.</p>
             <p class="text-sm mb-6 text-gray-400">
-                Email: admin@dochubservices.com | Phone: (876) XXX-XXXX
+                Email: admin@dochubservices.com | Phone: (876) 561 2614
             </p>
             
             <!-- Mandatory Legal Links -->
@@ -377,5 +377,6 @@
     </script>
 </body>
 </html>
+
 
 
