--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
             <a href="#services" class="text-navy hover:text-gold font-medium mb-8 inline-block"><i data-lucide="arrow-left" class="inline-block w-4 h-4 mr-2 -mt-0.5"></i> Back to Services Overview</a>
             
-            <h2 class="text-3xl sm:text-4xl font-extrabold text-navy mb-6 border-b pb-4">Core Form Preparation: Breakdown & Terms</h2>
+            <h2 class="text-3xl sm:text-4xl font-extrabold text-navy mb-6 border-b pb-4">Core Form Preparation</h2>
 
             <!-- Pain Point and Solution -->
             <div class="mb-8">
@@ -256,7 +256,7 @@
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
             <a href="#services" class="text-navy hover:text-gold font-medium mb-8 inline-block"><i data-lucide="arrow-left" class="inline-block w-4 h-4 mr-2 -mt-0.5"></i> Back to Services Overview</a>
 
-            <h2 class="text-3xl sm:text-4xl font-extrabold text-navy mb-6 border-b pb-4">Digital Confidence Coaching: Breakdown & Terms</h2>
+            <h2 class="text-3xl sm:text-4xl font-extrabold text-navy mb-6 border-b pb-4">Digital Confidence Coaching</h2>
 
             <!-- Pain Point and Solution -->
             <div class="mb-8">
@@ -384,3 +384,4 @@
     </script>
 </body>
 </html>
+
