Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
             </div>
 
             <p class="text-xs mt-4 text-gray-500">
-                &copy; 2025 Docu-Hub Operations Services. All Rights Reserved. Data Controller ID [OIC ID Placeholder].
+                &copy; 2025 Docu-Hub Operations Services. All Rights Reserved. Data Controller ID [].
             </p>
         </div>
     </footer>
