--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Header & Navigation -->
     <header class="bg-white shadow-lg sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex justify-between items-center">
-            <a href="#" class="text-2xl font-extrabold text-navy flex items-center tracking-tight" aria-label="Docu-Hub Home">
+            <a href="#top" class="text-2xl font-extrabold text-navy flex items-center tracking-tight" aria-label="Docu-Hub Home">
                 <span class="text-4xl mr-2 text-gold">✓</span>
                 DOCU-HUB OPERATIONS SERVICES
             </a>
@@ -458,4 +458,5 @@
     </script>
 </body>
 </html>
+
 
