Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
             <a href="#services" class="text-navy hover:text-gold font-medium mb-8 inline-block"><i data-lucide="arrow-left" class="inline-block w-4 h-4 mr-2 -mt-0.5"></i> Back to Services Overview</a>
             
-            <h2 class="text-3xl sm:text-4xl font-extrabold text-navy mb-6 border-b pb-4">Core Form Preparation: Breakdown & Terms</h2>
+            <h2 class="text-3xl sm:text-4xl font-extrabold text-navy mb-6 border-b pb-4">Core Form Preparation (CFP)</h2>
 
             <!-- Pain Point and Solution -->
             <div class="mb-8">
@@ -295,7 +295,7 @@
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
             <a href="#services" class="text-navy hover:text-gold font-medium mb-8 inline-block"><i data-lucide="arrow-left" class="inline-block w-4 h-4 mr-2 -mt-0.5"></i> Back to Services Overview</a>
 
-            <h2 class="text-3xl sm:text-4xl font-extrabold text-navy mb-6 border-b pb-4">Digital Confidence Coaching: Breakdown & Terms</h2>
+            <h2 class="text-3xl sm:text-4xl font-extrabold text-navy mb-6 border-b pb-4">Digital Confidence Coaching (DCC)</h2>
 
             <!-- Pain Point and Solution -->
             <div class="mb-8">
@@ -509,3 +509,4 @@
     </script>
 </body>
 </html>
+
