--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- MANDATORY: FAVICON/LOGO IN LINK -->
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" href="favicon.ico">
     
     <!-- FIX: Font Optimization (Section 3.3) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -525,3 +528,4 @@
     </script>
 </body>
 </html>
+
