--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- MANDATORY: FAVICON/LOGO IN LINK -->
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="shortcut icon" href="favicon.ico">
     
     <!-- FIX: Font Optimization (Section 3.3) -->
@@ -528,4 +528,5 @@
     </script>
 </body>
 </html>
+
 
