--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                     <div class="grid grid-cols-1 sm:grid-cols-2 gap-x-4 gap-y-2 mt-4"> <!-- FIX: Added gap-x-4 and gap-y-2 -->
                         <!-- Left Box: Link to Full TOS -->
                         <div class="bg-blue-100 p-2 rounded-lg text-center"> <!-- FIX: Reduced padding to p-2 -->
-                            <a href="terms_of_service.md" target="_blank" class="text-blue-700 font-bold hover:underline flex items-center justify-center text-xs sm:text-sm"> <!-- FIX: Reduced text size -->
+                            <a href="PDF/terms-of-service.pdf" target="_blank" class="text-blue-700 font-bold hover:underline flex items-center justify-center text-xs sm:text-sm"> <!-- FIX: Reduced text size -->
                                 <i data-lucide="file-text" class="w-4 h-4 mr-1 flex-shrink-0"></i>
                                 READ FULL TERMS OF SERVICE
                             </a>
@@ -527,3 +527,4 @@
     </script>
 </body>
 </html>
+
