--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 End the Runaround. <span class="text-gold block sm:inline-block mt-2">Gain True Confidence.</span>
             </h1>
             <p class="text-lg sm:text-2xl font-light mb-10 max-w-4xl mx-auto opacity-90"> <!-- FIX: mb-10 added -->
-                Expert clerical preparation for all high-stakes Jamaican documents including Passport, Birth Certificate, and Tax Forms. Zero errors guaranteed.
+                Expert clerical preparation for all high-stakes Jamaican documents including Passport, Birth Certificate, and Tax Forms. Zero data errors guaranteed.
             </p>
             <div class="bg-gray-900 inline-block px-6 py-3 rounded-xl shadow-lg mb-12 border border-gold"> <!-- FIX: mb-12 added -->
                 <p class="text-sm font-bold text-gold uppercase tracking-widest">
@@ -527,4 +527,5 @@
     </script>
 </body>
 </html>
+
 
