--- a/intake_protocol.html
+++ b/intake_protocol.html
@@ -10,6 +10,24 @@
             <a href="index.html" class="text-white hover:text-gold">← Back to Services</a>
         </nav>
     </header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --color-navy: #1E293B; /* Primary Color */
+            --color-gold: #E0B841; /* Accent Color */
+        }
+        body { font-family: 'Inter', sans-serif; }
+        .bg-navy { background-color: var(--color-navy); }
+        .text-navy { color: var(--color-navy); }
+        .btn-primary { background-color: var(--color-gold); color: var(--color-navy); }
+        .btn-primary:hover { background-color: #f0c95a; }
+        .border-gold { border-color: var(--color-gold); }
+    </style>
+    </head>
 
     <main class="container mx-auto p-8 max-w-4xl">
         <h1 class="text-3xl font-bold text-center mb-8">Mandatory Compliance & Intake Protocol</h1>
