--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Header with Unified Styling -->
     <header class="bg-navy text-white p-4 shadow-lg sticky top-0 z-10">
         <nav class="container mx-auto flex justify-between items-center">
-            <div class="text-xl font-extrabold text-white">DOCU-HUB OPS</div>
+            <div class="text-xl font-extrabold text-white">DOCU-HUB OPERATIONS SERVICES</div>
             <div class="space-x-4 flex items-center">
                 <a href="about.html" class="hover:text-gold text-white font-medium transition duration-150 p-2 rounded-lg">About Us</a>
                 <a href="intake_protocol.html" class="btn-primary py-2 px-4 rounded-xl font-bold shadow-md">
@@ -97,8 +97,8 @@
     <footer class="bg-navy text-white p-6 mt-12">
         <div class="container mx-auto text-center text-sm">
             &copy; 2025 Docu-Hub Operations Services. | 
-            <a href="[LINK TO TERMS OF SERVICE PDF]" target="_blank" class="hover:text-gold underline font-medium">Terms of Service</a> | 
-            <a href="[LINK TO PRIVACY POLICY PDF]" target="_blank" class="hover:text-gold underline font-medium">Privacy Policy</a>
+            <a href="[PDF/terms-of-services.pdf]" target="_blank" class="hover:text-gold underline font-medium">Terms of Service</a> | 
+            <a href="[PDF/privacy-policy.pdf]" target="_blank" class="hover:text-gold underline font-medium">Privacy Policy</a>
         </div>
     </footer>
     <script>
@@ -109,3 +109,4 @@
     </script>
 </body>
 </html>
+
